bug 222920 : fix the conversion error in super/subscript offset and underline offset calculation in Xft build (r=blizzard, sr=bz)